Update: 01.05.2021 Resolved current density problem New problem with unstable BTE-PE, which occurs only when u_Bias != 0 Problem gets worse with higher voltage

--- a/.gitignore
+++ b/.gitignore
@@ -37,11 +37,14 @@
 *.eps
 
 # Gnuplot/GLE scripts
-*.gp
-*.gle
+# *.gp
+# *.gle
 
 # Output files
 *.dat
 *.out
 *.z
-out
+*.csv
+
+# Run file
+run
